# API-DANSORT

./: .env  .env.example  .gitignore  CURL_EXAMPLES_SKU_ASSIGNMENT.md  Cargo.toml  FIX_SUMMARY.md  GUIA_CONSULTAS_SERFRUIT_DUMMY.md  MANUAL_API.md  README.md  build.sh  deploy.sh  dist  go.mod  go.sum  main.go  package-lock.json  package.json  socket.ts  test-method-types.go  test-sqlserver-connection.go  test-sqlserver-url.go  test_batch.go  test_batch_routing.go
DB/: db_create.sql  db_drop.sql  fx6_lectura_datamatrix_create.sql  greendex_db_table_create.sql  greendex_db_table_drop.sql  migration_add_dark.sql  migration_fix_salida_sku_constraint.sql
cmd/: main.go  main.go.corrupted  main.go.orig  main.go.rej
cmd/cognex_simulator/: main.go
cmd/cognex_sorter/: main.go
cmd/cognex_web_simulator/: main.go
cmd/dantrack/: main.go
cmd/dbtest/: main.go
cmd/diagnose-fx6/: main.go
cmd/http/: main.go
cmd/plc/: main.go
cmd/serfruit/: main.go
cmd/setup-datamatrix-table/: main.go
cmd/sku-sync/: main.go
cmd/sorter/: main.go
communication/: http-frontend.go  opcua-plc.go
config/: .config.yaml.swp  config.yaml
docs/: ARQUITECTURA_CANALES_SORTER.md  CHANGELOG.md  CHANGELOG_SISTEMA.md  DIAGNOSTICO_SKU_SYNC.md  FIX_WAGO_WRITING.md  HISTORIAL_VERSIONES.html  HISTORIAL_VERSIONES_SIMPLE.md  Tren-cajas.txt  VARIABLES_ENTORNO.md  generar_pdf.py
manager/: opcua-method.go  opcua-subscription.go
scripts/: verify-sku-sync.sh
shared/: const.go
src/: http.rs  main.rs
test/: http-test.go
web/: simulator.html  visualizer.html  visualizer.html.old
(+69 files in other folders)
