[package]
name = "api-greenex-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# OPC UA Client
opcua = { version = "0.12", features = ["client", "console-logging"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenv = "0.15"

# Time utilities
chrono = "0.4"

# Async channels
async-channel = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
